# wingman

./: .env.backend  .env.chroma  .env.example  .env.postgres  .gitignore  .release-please-manifest.json  AGENTS.md  CONTRIBUTING.md  LICENSE  LICENSE_HISTORY  Makefile  QUICKSTART.md  README.md  compose.yaml  docker-compose.yml  mise.toml  release-please-config.json  wingman.code-workspace
.claude/skills/adr/: SKILL.md
.claude/skills/github-actions/: SKILL.md
.claude/skills/github-actions-troubleshooting/: SKILL.md
.github/workflows/: build.yml  release-please.yml
backend/: .dockerignore  CHANGELOG.md  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml  requirements.txt  run_bot.py
backend/app/: __init__.py  config.py  database.py  main.py  rag.py  slack_bot.py  vector_store.py
backend/migrations/: README.md  env.py
backend/migrations/versions/: eb89cf21f6fd_initial_schema_with_conversation_memory.py
backend/tests/: __init__.py  test_api.py  test_file_extraction_units.py  test_file_upload.py  test_rag_with_memory.py
docs/: SETUP.md  SLACK_AUTH.md  getting-started.md  slack-auth.md  terraform.md
docs/adrs/: 0001-technology-stack-and-rag-architecture.md  0002-release-please-for-monorepo-versioning.md  0003-terraform-slack-app-iac.md  README.md
frontend/: .dockerignore  CHANGELOG.md  Dockerfile  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/lib/: api.ts
scripts/: load_tf_vars.py  post_slack_messages.py  pyproject.toml  sync_tf_vars.py  validate.sh
terraform/: .gitignore  backend.tf  main.tf  outputs.tf  variables.tf
(+1 files in other folders)
