[project]
name = "wingman"
version = "1.1.0"
description = "Wingman - Slack bot with RAG capabilities"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0,<1.0",
    "uvicorn[standard]>=0.40.0,<1.0",
    "python-dotenv>=1.2.1,<2.0",
    "pydantic>=2.12.5,<3.0",
    "pydantic-settings>=2.12.0,<3.0",
    "slack-bolt>=1.27.0,<2.0",
    "slack-sdk>=3.39.0,<4.0",
    "langchain>=1.2.0,<2.0",
    "langchain-community>=0.4.1,<1.0",
    "langchain-openai>=1.1.6,<2.0",
    "openai>=2.14.0,<3.0",
    "chromadb>=0.4.0,<1.0",
    "psycopg2-binary>=2.9.11,<3.0",
    "sqlalchemy>=2.0.45,<3.0",
    "alembic>=1.17.2,<2.0",
    "httpx>=0.28.1,<1.0",
    "tenacity>=9.1.2,<10.0",
    "pypdf>=6.2.0,<7.0",
    "python-docx>=1.2.0,<2.0",
]

[project.optional-dependencies]
dev = ["pytest>=9.0.2,<10.0", "pytest-asyncio>=1.3.0,<2.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = ["pytest>=9.0.2,<10.0", "pytest-asyncio>=1.3.0,<2.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
